namespaces/live.cloud-platform.service.justice.gov.uk/jakemulley-refactor-template/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jakemulley-refactor-template
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "cloud-platform"
    cloud-platform.justice.gov.uk/application: "Namespace to test refactoring namespace-cli templates"
    cloud-platform.justice.gov.uk/owner: "webops: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cloud-platform"
    cloud-platform.justice.gov.uk/team-name: "webops"
    cloud-platform.justice.gov.uk/review-after: "2023-05-07"
